# AMSwarm

./: .gitignore  CMakeLists.txt  README.md  animate_traj.py
data/: .gitignore
src/: sim_am_swarm.cpp
